<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.projectZarna.oopsfeature">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardElevation="20dp"
        android:layout_margin="20dp"
        app:strokeWidth="2dp"
        android:id="@+id/title"
        app:strokeColor="@color/border"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="OOPS'S Features"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_margin="20dp"
        app:cardElevation="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:strokeColor="@color/border"
        app:strokeWidth="2dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="Inheritance"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:id="@+id/inhertiance"
                    android:textColor="@color/teal_200"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:id="@+id/inheritinfo"
                    app:layout_constraintTop_toBottomOf="@+id/inhertiance"
                    android:textColor="@color/black"
                    android:text="@string/inherit"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/inheritinfo"
                    android:textColor="@color/black"
                    android:text="@string/need"
                    android:id="@+id/need"
                    android:textSize="20dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:id="@+id/extendskey"
                    app:layout_constraintTop_toBottomOf="@+id/need"
                    android:text="@string/extendkey"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/extendskey"
                    android:text="Polymophism"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:id="@+id/poly"
                    android:textColor="@color/teal_200"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:id="@+id/polyinfo"
                    app:layout_constraintTop_toBottomOf="@+id/poly"
                    android:text="@string/poly"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:id="@+id/compileinfo"
                    app:layout_constraintTop_toBottomOf="@+id/polyinfo"
                    android:text="@string/compile"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:id="@+id/runinfo"
                    app:layout_constraintTop_toBottomOf="@+id/compileinfo"
                    android:text="@string/run"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="30dp"
                    android:textColor="@color/teal_200"
                    android:id="@+id/Encapsulation"
                    app:layout_constraintTop_toBottomOf="@+id/runinfo"
                    android:text="Encapsulation in Java"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:id="@+id/Encapsulationinfo"
                    app:layout_constraintTop_toBottomOf="@+id/Encapsulation"
                    android:text="@string/enc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="30dp"
                    android:textColor="@color/teal_200"
                    android:id="@+id/Abstraction"
                    app:layout_constraintTop_toBottomOf="@+id/Encapsulationinfo"
                    android:text="Abstraction in java"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:id="@+id/Abstractioninfo"
                    app:layout_constraintTop_toBottomOf="@+id/Abstraction"
                    android:text="@string/abs"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/Abstractioninfo"
                    android:text="@string/absif"/>





            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>