<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.projectZarna.Introduction">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardElevation="20dp"
        android:layout_margin="20dp"
        app:strokeWidth="2dp"
        android:id="@+id/title"
        app:strokeColor="@color/border"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="What is JDK,JRE,JVM"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_margin="20dp"
        app:cardElevation="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:strokeColor="@color/border"
        app:strokeWidth="2dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="JDK"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:id="@+id/jdk"
                    android:textColor="@color/teal_200"/>

                <TextView
                    app:layout_constraintTop_toBottomOf="@+id/jdk"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/jdk"
                    android:textSize="20dp"
                    android:id="@+id/jdkinfo"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="JRE"
                    android:textSize="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/jdkinfo"
                    android:textAlignment="textStart"
                    android:id="@+id/jre"
                    android:textColor="@color/teal_200"/>

                <TextView
                    app:layout_constraintTop_toBottomOf="@+id/jre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/jre"
                    android:textSize="20dp"
                    android:id="@+id/jreinfo"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="JVM"
                    android:textSize="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/jreinfo"
                    android:textAlignment="textStart"
                    android:id="@+id/jvm"
                    android:textColor="@color/teal_200"/>
                <TextView
                    app:layout_constraintTop_toBottomOf="@+id/jvm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/jvm"
                    android:textSize="20dp"
                    android:id="@+id/jvminfo"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Main Method"
                    android:textAlignment="textStart"
                    android:textSize="20dp"
                    android:textColor="@color/teal_200"
                    android:id="@+id/mainmethodtitle"
                    app:layout_constraintTop_toBottomOf="@+id/jvminfo"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mainmethod"
                    android:textSize="20dp"
                    android:id="@+id/mainmethodinfo"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/mainmethodtitle"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>