<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.Project">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardElevation="20dp"
        android:layout_margin="20dp"
        app:strokeWidth="2dp"
        android:id="@+id/title"
        app:strokeColor="@color/border"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Arrays"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_margin="20dp"
        app:cardElevation="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:strokeColor="@color/border"
        app:strokeWidth="2dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="Array"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:id="@+id/array"
                    android:textColor="@color/teal_200"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/arrayone"
                    android:textSize="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/array"
                    android:textAlignment="textStart"
                    android:id="@+id/arrayinfo"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Declaration of an Array"
                    android:textSize="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/arrayinfo"
                    android:textAlignment="textStart"
                    android:id="@+id/declarearray"
                    android:textColor="@color/teal_200"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/declarearry"
                    android:textSize="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/declarearray"
                    android:textAlignment="textStart"
                    android:id="@+id/declarearrayinfo"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Initializing an Array"
                    android:textSize="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/declarearrayinfo"
                    android:textAlignment="textStart"
                    android:id="@+id/initializearray"
                    android:textColor="@color/teal_200"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/initilazarray"
                    android:textSize="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/initializearray"
                    android:textAlignment="textStart"
                    android:id="@+id/initilazearrayinfo"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Two dimensional array"
                    android:textSize="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/initilazearrayinfo"
                    android:textAlignment="textStart"
                    android:id="@+id/twodimen"
                    android:textColor="@color/teal_200"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/twodimen"
                    android:textSize="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/twodimen"
                    android:textAlignment="textStart"
                    android:id="@+id/twodimeninfo"
                    android:textColor="@color/black"/>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>